<resources>
    <string name="app_name">AppLaunchDemo</string>
    <string name="welcome">Welcome!</string>
    <string name="login">Login</string>
    <string name="welcome_msg">This app will provide you with weather details according to users, please login with your credentials.</string>
    <string name="log_in">Log In</string>
    <string name="login_msg">Please enter your Email Address and Password below</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="invalid_credentials_msg">Please enter valid email address and password.</string>
    <string name="user_list">User List</string>
    <string name="empty_list_msg">Oops! Seems like users are not added yet.\nAdd User from + icon from top right corner.</string>
    <string name="delete">Delete</string>
    <string name="delete_msg">Are you sure you want to delete this user data?</string>
    <string name="cancel">Cancel</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_user">Add User</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="add_user_details">Add User Details</string>
    <string name="valid_info_msg">Enter valid user information</string>
    <string name="weather">Weather</string>
    <string name="logout">Logout</string>
    <string name="error_api_msg">Sorry! API call is not working right now, try again later</string>
    <string name="weather_data">Weather Data</string>
    <string name="temp">Temp:- %f</string>
    <string name="weatherName">Weather:- %s</string>
    <string name="weatherDescription">Weather Description:- %s</string>
    <string name="humidity">Humidity:- %d</string>
    <string name="windSpeed">Wind Speed:- %f</string>
    <string name="loading_nplease_wait">Loading…\nPLease wait</string>
</resources>